# claude-code-telemetry

./: .gitignore  CLAUDE.md  README.md  jaeger-compose.yml  otel-collector-config.yml  otel-compose.yml  pyproject.toml  venv.ps1
.claude/: settings.json
.claude/skills/application-review/: SKILL.md
.claude/skills/date-today/: SKILL.MD
.claude/skills/django-today/: SKILL.MD
python/: code-reformat.ps1  code-reformat.sh  main.py  otel-compose.yml  pyproject.toml  readme.md  venv.sh
python/src/aitools/: claude_telemetry_util.py  claude_zip_util.py  otel_emitter.py
python/src/io/: fileio.py
